--- a/www/index.html
+++ b/www/index.html
@@ -4,91 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script type="text/javascript" src="js/highcharts.js"></script>
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/linq.min.js"></script>
+    <script type="text/javascript" src="js/angular-1.4.4.js"></script>
     <script type="text/javascript" src="js/money.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/theme.css">
 
-    <style>
-      body {
-        padding-top: 50px;
-      }
-      div#dropTarget {
-        text-align: center;
-        /*height: 150px;*/
-        border: 2px #d7d7d7 dashed;
-        border-radius: 10px;
-        line-height: 3.5;
-        margin-top: 20px;
-        box-sizing: border-box;
-      }
-      span#dropTargetText {
-        font-size: 3.0em;
-        color: #d7d7d7;
-      }
-
-      button {
-        height: 34px;
-      }
-
-      div.fileDetailsContainer {
-        pading: 10px;
-      }
-
-      div.fileDetailsContainer:hover {
-        background-color: orange;
-      }
-    </style>
   </head>
   <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <i class="fa fa-dollar"></i>&nbsp;&nbsp;Adam's Finance Project</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <a class="btn btn-block btn-social btn-facebook">
-                <i class="fa fa-facebook"></i> Sign in with Facebook
-              </a>
-            </div>
-          </form>
-        </div>
+    <div class="container">
+      <div>
+        <fn-drop-target fn-controller="dropFilesCtrl">
+          <span id="dropTargetText"><i class="fa fa-file-text-o"></i> Drop files here</span>
+        </fn-drop-target>
       </div>
-    </nav>
-      <div class="container">
-        <div ng-controller="fileController as fc">
-          <fn-drop-target>
-            <span id="dropTargetText"><i class="fa fa-file-text-o"></i> Drop files here</span>
-          </fn-drop-target>
-        </div>
-      <!--
-      <dl class="dl-horizontal">
-        <dt>hey</dt>
-        <dd>you</dd>
-        <dt>heey</dt>
-        <dd>yeeeou</dd>
-        <dt>heyeeeeee</dt>
-        <dd>youeeeeeeeee</dd>
-      </dl>
-      -->
-      <!--
-      <as-dataview>
-        <as-chart></as-chart>
-        <as-grid><as-grid>
-      </as-dataview>
-    -->
     </div>
   </body>
 </html>
