--- a/www/index.html
+++ b/www/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script type="text/javascript" src="js/angular-1.4.4.js"></script>
+    <script type="text/javascript" src="js/ng-lodash-3.8.0.js"></script>
     <script type="text/javascript" src="js/money.js"></script>
+    <script type="text/javascript" src="js/money-templates.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" href="css/theme.css">
 
   </head>
   <body>
-    <div class="container">
-      <div>
-        <fn-drop-target fn-controller="dropFilesCtrl">
-          <span id="dropTargetText"><i class="fa fa-file-text-o"></i> Drop files here</span>
+    <div class="row">
+        <fn-drop-target id="dropTarget" class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1">
+          <i class="fa fa-file-text-o"></i> Drop files here
         </fn-drop-target>
       </div>
-    </div>
   </body>
 </html>
