Import transactions completed. Basic list generated.

--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,13 @@
   </head>
   <body>
     <div class="row">
-        <fn-drop-target id="dropTarget" class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1">
-          <i class="fa fa-file-text-o"></i> Drop files here
-        </fn-drop-target>
-      </div>
+      <fn-drop-target id="dropTarget" class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1">
+        <i class="fa fa-file-text-o"></i> Drop files here
+      </fn-drop-target>
+    </div>
+
+    <div class="row">
+      <fn-transactions-list class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1"></fn-transactions-list>
+    </div>
   </body>
 </html>
