Filter transactions table, support old format.

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="row">
-      <fn-transactions-list class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1"></fn-transactions-list>
+      <fn-transactions-list id="transactionsList" class="col-lg-10 col-md-10 col-lg-offset-1 col-md-offset-1"></fn-transactions-list>
     </div>
   </body>
 </html>
